# fashion-snap-test

./: .gitignore  .gitmodules  background.js  content.js  manifest.json  package.json  popup.html  popup.js  pyproject.toml  server.py  styles.css  webpack.config.js  zara-individual-item.html  zara-individual-small-screen.html  zara-product-grid.html  zara-satin-effect-polo.html
backend/: pyproject.toml  server.py
frontend/: index.html  package.json  popup.html  sidepanel.html  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.svelte  app.css  background.js  content.js  popup.js
frontend/src/components/: Popup.svelte
frontend/src/lib/: background.ts  content.ts
